--- a/src/components/ReaderModal.module.css
+++ b/src/components/ReaderModal.module.css
@@ -10,7 +10,7 @@
     align-items: center;
     opacity: 0;
     transition: opacity 0.3s ease;
-    padding: 1rem;
+    padding: 3rem 1.5rem;
     overscroll-behavior: contain;
 }
 
@@ -173,7 +173,7 @@
 
 @media (max-width: 600px) {
     .modal {
-        height: 90vh;
+        height: 75vh;
     }
 
     .header {
